# rust-miniscript

./: Cargo.toml  temp.txt
contrib/: test.sh
examples/: htlc.rs  interpreter.rs  miniscript_demo.rs  miniscript_demo_analysis.rs  satisfier_demo.rs
integration_test/: Cargo.toml  run.sh
integration_test/src/: main.rs
src/: expression.rs  lib.rs
src/descriptor/: bare.rs  create_descriptor.rs  mod.rs  satisfied_constraints.rs  satisfied_contraints.rs  segwitv0.rs
src/miniscript/: astelem.rs  decode.rs  iter.rs  mod.rs  satisfy.rs
src/miniscript/types/: correctness.rs  extra_props.rs  malleability.rs  mod.rs
src/policy/: compiler.rs  concrete.rs  mod.rs
src/psbt/: finalizer.rs  mod.rs
