[package]
name = "integration_test"
version = "0.1.0"
authors = ["Steven Roose <steven@stevenroose.org>", "Sanket K <sanket1729@gmail.com>"]

[dependencies]
miniscript = {path = "../"}
bitcoincore-rpc = "0.12.0"
bitcoin = { version = "0.25", features = [ "use-serde", "rand" ] }
lazy_static = "1.4.0"
log = "0.4"
